res-46 fix gap between contacts

--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -137,6 +137,7 @@
     width: 100%;
     margin: 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 3.5rem;
   }
 
   &__contact {
